force-app/main/default/objects/NaturezaOperacao__c/NaturezaOperacao__c.object-meta.xml
<CustomObject>
    <label>Natureza de Operação</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Naturezas de Operação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>