force-app/main/default/objects/NaturezaOperacao__c/fields/CodigoNaturezaOperacao__c.field-meta.xml
<CustomField>
    <fullName>CodigoNaturezaOperacao__c</fullName>
    <externalId>true</externalId>
    <label>Código da Natureza de Operação</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>