force-app/main/default/objects/NaturezaOperacao__c/fields/GerarComissao__c.field-meta.xml
<CustomField>
    <fullName>GerarComissao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gerar Comissão</label>
    <type>Checkbox</type>
</CustomField>