force-app/main/default/objects/NaturezaOperacao__c/fields/PermiteForaMultiploEmbalagem__c.field-meta.xml
<CustomField>
    <fullName>PermiteForaMultiploEmbalagem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permite Fora do Múltiplo da Embalagem</label>
    <type>Checkbox</type>
</CustomField>